added github link to index

--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@ excuse the mess.
                                     <i class="mobile-list">instagram</i>
                                 </a>
                             </li>
+
+                            <li>
+                                <a href="">
+                                    <i class="mobile-list">/</i>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="https://github.com/j-s">
+                                    <i class="mobile-list">github</i>
+                                </a>
+                            </li>
+
                             <li>
                                 <a href="#">
                                     <i class="mobile-list">/</i>
